fixed url problem, removed $scope.advisorName variable

--- a/sespa/app/views/advisor_detail.html
+++ b/sespa/app/views/advisor_detail.html
@@ -77,7 +77,7 @@
 	          </thead>
 	          <tbody>
 	            <tr ng-repeat="student in advisorsStudent | orderBy:sortType:sortReverse">
-<!-- 	              <td class="bold"><a ng-click="scroll()" href="/#/students/{{student.username}}/">{{ student.last_name }}, {{ student.first_name }}</a></td> -->
+<!-- 	              <td class="bold"><a ng-click="scroll()" href="#/students/{{student.username}}/">{{ student.last_name }}, {{ student.first_name }}</a></td> -->
 				  <td class="bold">{{ student.last_name }}, {{ student.first_name }}</a></td>
 	              <td>{{ student.univ_id }}</td>
 	              <td ng-if="hasStatusData">
