--- a/sespa/app/views/advisor_list.html
+++ b/sespa/app/views/advisor_list.html
@@ -44,7 +44,7 @@
 	          </thead>
 	          <tbody>
             <tr ng-repeat="advisor in advisors | orderBy:sortType:sortReverse | filter:searchAdvisor">
-	              <td class="bold"><a ng-click="scroll()" href="http://localhost:2080/#/advisors/{{advisor.username}}">{{ advisor.last_name }}, {{ advisor.first_name }}</a></td>
+	              <td class="bold"><a href="#/advisors/{{advisor.username}}">{{ advisor.last_name }}, {{ advisor.first_name }}</a></td>
 	              <td>{{ advisor.univ_id }}</td>
 	            </tr>
 	          </tbody>
