--- a/sespa/app/views/advisor_detail.html
+++ b/sespa/app/views/advisor_detail.html
@@ -8,7 +8,7 @@
 	      	<md-button class="md-icon-button back-button" aria-label="Settings" ng-click="toAdvisorList()">
 	          <md-icon md-font-library="material-icons">arrow_back</md-icon>
 	        </md-button>
-	        <h1><span>{{advisor.last_name}}, {{advisor.first_name}}</span></h1>
+	        <h1><span>{{advisor.first_name}} {{advisor.last_name}}</span></h1>
 	        <span flex></span>
 	        <!-- <form class="search-bar">
 	          <div class="form-group">
@@ -25,8 +25,8 @@
 	  <div layout="row" layout-sm="column">
 	    <md-content id="content">
 	      <div class="advisor-info">
-	      	<p>Advisor Name:&nbsp;&nbsp; {{advisor.last_name}}, {{advisor.first_name}}</p>
-	      	<p>Advisor ID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{advisor.univ_id}}</p>
+	      	<p>Advisor Name:&nbsp;&nbsp;{{advisor.first_name}} {{advisor.last_name}}</p>
+	      	<p>Advisor ID:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{advisor.univ_id}}</p>
 	      </div>
 		  <div class="tb advisor-student-table">
 		  	<p>Advisor's Students:</p>
@@ -59,11 +59,11 @@
 	                  <span ng-show="sortType == 'cohorts' &amp;&amp; sortReverse" class="fa fa-caret-up"></span>
 	                </a>
 	              </td>
-	              <td ng-if="hasGPAData">
-	                <a href="" ng-click="sortType = 'GPA'; sortReverse = !sortReverse">
+	              <td ng-if="hasGpaData">
+	                <a href="" ng-click="sortType = 'gpa'; sortReverse = !sortReverse">
 	                  GPA
-	                  <span ng-show="sortType == 'GPA' &amp;&amp; !sortReverse" class="fa fa-caret-down"></span>
-	                  <span ng-show="sortType == 'GPA' &amp;&amp; sortReverse" class="fa fa-caret-up"></span>
+	                  <span ng-show="sortType == 'gpa' &amp;&amp; !sortReverse" class="fa fa-caret-down"></span>
+	                  <span ng-show="sortType == 'gpa' &amp;&amp; sortReverse" class="fa fa-caret-up"></span>
 	                </a>
 	              </td>
 	              <td ng-if="hasYearData">
@@ -78,7 +78,7 @@
 	          <tbody>
 	            <tr ng-repeat="student in students | orderBy:sortType:sortReverse">
 <!-- 	              <td class="bold"><a ng-click="scroll()" href="#/students/{{student.username}}/">{{ student.last_name }}, {{ student.first_name }}</a></td> -->
-				  <td class="bold">{{ student.last_name }}, {{ student.first_name }}</a></td>
+				  <td class="bold">{{ student.first_name }} {{ student.last_name }}</td>
 	              <td>{{ student.univ_id }}</td>
 	              <td ng-if="hasStatusData">
 					  <img ng-repeat="status in student.statuses track by $index"
@@ -90,7 +90,7 @@
 	                <ul style="list-style-type:none">
 	                  <li ng-repeat="cohort in student.cohorts">{{ cohort }}</li>
 	                </ul></td>
-	              <td ng-if="hasGPAData">{{ student.GPA }}</td>
+	              <td ng-if="hasGpaData">{{ student.gpa }}</td>
 	              <td ng-if="hasYearData">{{ student.year }}</td>
 	            </tr>
 	          </tbody>
