--- a/sespa/app/views/advisor_list.html
+++ b/sespa/app/views/advisor_list.html
@@ -1,59 +1,32 @@
-<!-- <div ng-controller="AdvisorCtrl as ctrl" ng-cloak> -->
-<div>
-		<div flex layout="row">
-
-	<md-content>
-	  <div flex layout="column" tabIndex="-1" role="main" class="md-whiteframe-z2">
-	    <md-toolbar >
-	      <div class="md-toolbar-tools" >
-	        <h1><span>All Advisors</span></h1>
-	        <span flex></span>
-	        <form class="search-bar">
-	          <div class="form-group">
-	            <div class="input-group">
-	              <div class="input-group-addon"><i class="fa fa-search"></i></div>
-	              <input type="text" class="form-control" placeholder="Search advisor" ng-model="searchAdvisor">
-	            </div>      
-	          </div>
-	        </form>
-	      </div>
-	    </md-toolbar>
-	  </div>
-
-	  <div layout="row" layout-sm="column">
-	    <md-content id="content">
-		  <div class="tb advisor-table">
-	        <table class="table table-bordered table-striped">
-	          <thead>
-	            <tr>
-	              <td>
-	                <a href="" ng-click="sortType = 'last_name'; sortReverse = !sortReverse">
-	                  Name
-	                  <span ng-show="sortType == 'last_name' &amp;&amp; !sortReverse" class="fa fa-caret-down"></span>
-	                  <span ng-show="sortType == 'last_name' &amp;&amp; sortReverse" class="fa fa-caret-up"></span>
-	                </a>
-	              </td>
-	              <td>
-	                <a href="" ng-click="sortType = 'univ_id'; sortReverse = !sortReverse">
-	                  Advisor ID
-	                  <span ng-show="sortType == 'univ_id' &amp;&amp; !sortReverse" class="fa fa-caret-down"></span>
-	                  <span ng-show="sortType == 'univ_id' &amp;&amp; sortReverse" class="fa fa-caret-up"></span>
-	                </a>
-	              </td>
-	            </tr>
-	          </thead>
-	          <tbody>
-            	<tr ng-repeat="advisor in advisors | orderBy:sortType:sortReverse | filter:searchAdvisor">
-	              <td class="bold"><a href="#/advisors/{{advisor.username}}">{{ advisor.first_name }} {{ advisor.last_name }}</a></td>
-	              <td>{{ advisor.univ_id }}</td>
-	            </tr>
-	          </tbody>
-	        </table>
-	      </div>
-	    </md-content>
-	  </div>
-	</md-content>
-
-	</div>
+<h2 ng-if="advisorListHeader" class="sub-header">{{advisorListHeader}}</h2>
+<div class="table-responsive">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <td>
+          <a href="" ng-click="sortType = 'last_name'; sortReverse = !sortReverse">
+            Name
+            <span class="fa fa-caret-down" ng-show="sortType == 'last_name' &amp;&amp; !sortReverse"></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'last_name' &amp;&amp; sortReverse"></span>
+          </a>
+        </td>
+        <td>
+          <a href="" ng-click="sortType = 'univ_id'; sortReverse = !sortReverse">
+            Advisor ID
+            <span class="fa fa-caret-down" ng-show="sortType == 'univ_id' &amp;&amp; !sortReverse"></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'univ_id' &amp;&amp; sortReverse"></span>
+          </a>
+        </td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="advisor in advisors | orderBy:sortType:sortReverse | filter:searchAdvisor">
+        <td class="bold">
+          <a href="#/advisors/{{advisor.username}}">{{ advisor.first_name }}
+            {{ advisor.last_name }}</a>
+        </td>
+        <td>{{ advisor.univ_id }}</td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-<hr/>
