Add user login flow
Fixes issue #20

--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -15,6 +15,10 @@ body {
   /*border-bottom: 1px solid #eee;*/
 }
 
+.navbar {
+    vertical-align: middle;
+}
+
 .navbar-fixed-top {
   border: 0;
 }
