--- a/hashredirect/templates/hashredirect/login.html
+++ b/hashredirect/templates/hashredirect/login.html
@@ -1,6 +1,13 @@
 <!doctype html>
 <html>
 <script>
-  window.location.href = '{{ login_url }}?hash_fragment=' + encodeURIComponent(window.location.hash.substring(1));
+  // remove # from the beginning if the hash fragment
+  hash_content = window.location.hash.substring(1);
+
+  if (hash_content.length === 0) {
+    window.location.href = '{{ login_url }}';
+  } else {
+    window.location.href = '{{ login_url }}?hash_fragment=' + encodeURIComponent(hash_content);
+  }
 </script>
 </html>
