Change student and advisor IDs and remove hasNoCourse variable
Change the students' and advisors' IDs so that the students' IDs start with
1 and the advisors' IDs start with 2. And remove the hasNoCourse variable in
student_detail.js, and then use student.class_sites.length directly in
student_detail.html for judging if there is no course info for a student.

--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -28,10 +28,10 @@
 </div>
 
 <h3>Courses</h3>
-<div ng-if="hasNoCourse">
+<div ng-if="student.class_sites.length == 0">
   <p>There is no course data for this student.</p>
 </div>
-<div ng-if="!hasNoCourse" class="table-responsive">
+<div ng-if="student.class_sites.length > 0" class="table-responsive">
   <table class="table table-striped">
     <thead>
       <tr>
