--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -98,6 +98,12 @@ body {
 }
 
 .course-status {
-    height: 20pt;
-    margin-right: 5px;
+  height: 20pt;
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 480px) {
+  .basic-info {
+    display: none;
+  }
 }
