--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -36,10 +36,10 @@
     <thead>
       <tr>
         <td>
-          <a href="" ng-click="sortType = 'class_site'; sortReverse = !sortReverse">
+          <a href="" ng-click="sortType = 'description'; sortReverse = !sortReverse">
             Course Title
-            <span class="fa fa-caret-down" ng-show="sortType == 'class_site' &amp;&amp; !sortReverse"></span>
-            <span class="fa fa-caret-up" ng-show="sortType == 'class_site' &amp;&amp; sortReverse"></span>
+            <span class="fa fa-caret-down" ng-show="sortType == 'description' &amp;&amp; !sortReverse"></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'description' &amp;&amp; sortReverse"></span>
           </a>
         </td>
         <td>
@@ -53,7 +53,7 @@
     </thead>
     <tbody>
       <tr ng-repeat="course in student.class_sites | orderBy:sortType:sortReverse | filter:searchAdvisor">
-        <td class="bold">{{ course.class_site }}</td>
+        <td class="bold">{{ course.description }}</td>
         <td>
           <img alt="{{course.status}}" class="course-status {{ course.status | lowercase }}" ng-src="images/Status_Icons_{{course.status}}.png"/>
       	</td>
