--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -43,11 +43,7 @@
           </a>
         </td>
         <td>
-          <a href="" ng-click="sortType = 'status'; sortReverse = !sortReverse">
-            Status
-            <span class="fa fa-caret-down" ng-show="sortType == 'status' &amp;&amp; !sortReverse"></span>
-            <span class="fa fa-caret-up" ng-show="sortType == 'status' &amp;&amp; sortReverse"></span>
-          </a>
+          <a>Status</a>
         </td>
       </tr>
     </thead>
