--- a/sespa/app/views/student_list.html
+++ b/sespa/app/views/student_list.html
@@ -1,4 +1,5 @@
 <h2 ng-if="studentListHeader" class="sub-header">{{studentListHeader}}</h2>
+<h3>Courses</h3>
 <div class="table-responsive">
 <table class="table table-striped">
   <thead>
