Use multiple API calls for student detail
Stop using the /students/<username>/full/ API URL.

--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -20,7 +20,7 @@
       <tr>
         <td>{{ student.univ_id }}</td>
         <td>
-          <p ng-repeat="cohort in student.cohorts">{{ cohort.description }}</p>
+          <p ng-repeat="cohort in student.cohorts">{{ cohort }}</p>
       	</td>
       </tr>
     </tbody>
