--- a/sespa/app/views/advisor_detail.html
+++ b/sespa/app/views/advisor_detail.html
@@ -1,3 +1,3 @@
 <h2 class="sub-header">{{advisor.first_name}} {{advisor.last_name}}</h2>
-<h3>Students</h3>
-  <div ng-include="'views/student_list.html'" ></div>
+<h3 ng-if="advisor">Students</h3>
+  <div ng-if="advisor" ng-include="'views/student_list.html'" ></div>
