--- a/sespa/app/views/course_detail.html
+++ b/sespa/app/views/course_detail.html
@@ -8,7 +8,7 @@
     <thead>
       <tr>
         <td>
-          <a href="" ng-click="sortType = 'description'; sortReverse = !sortReverse">
+          <a href="" ng-click="sortType = 'assignment.description'; sortReverse = !sortReverse">
             Assignment
             <span class="fa fa-caret-down" ng-show="sortType == 'description' &amp;&amp; !sortReverse"></span>
             <span class="fa fa-caret-up" ng-show="sortType == 'description' &amp;&amp; sortReverse"></span>
@@ -24,10 +24,18 @@
           <a>Points Possible</a>
         </td>
         <td>
-          <a>Weight</a>
+          <a href="" ng-click="sortType = 'weight'; sortReverse = !sortReverse">
+            Weight
+            <span class="fa fa-caret-down" ng-show="sortType == 'weight' &amp;&amp; !sortReverse"></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'weight' &amp;&amp; sortReverse"></span>
+          </a>
         </td>
         <td>
-          <a>Due Date</a>
+          <a href="" ng-click="sortType = 'due_date'; sortReverse = !sortReverse">
+            Due Date
+            <span class="fa fa-caret-down" ng-show="sortType == 'due_date' &amp;&amp; !sortReverse"></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'due_date' &amp;&amp; sortReverse"></span>
+          </a>
         </td>
         <td>
           <a>Grader's Comment</a>
