Fix remaining problems with sortType variables

--- a/sespa/app/views/student_detail.html
+++ b/sespa/app/views/student_detail.html
@@ -35,15 +35,15 @@
         <td>
           <a href="" ng-click="sortTypeAdvisor = 'advisor.last_name'; sortReverseAdvisor = !sortReverseAdvisor">
             Advisor Name
-            <span class="fa fa-caret-down" ng-show="sortTypeAdvisor == 'last_name' &amp;&amp; !sortReverseAdvisor"></span>
-            <span class="fa fa-caret-up" ng-show="sortTypeAdvisor == 'last_name' &amp;&amp; sortReverseAdvisor"></span>
+            <span class="fa fa-caret-down" ng-show="sortTypeAdvisor == 'advisor.last_name' &amp;&amp; !sortReverseAdvisor"></span>
+            <span class="fa fa-caret-up" ng-show="sortTypeAdvisor == 'advisor.last_name' &amp;&amp; sortReverseAdvisor"></span>
           </a>
         </td>
         <td>
           <a href="" ng-click="sortTypeAdvisor = 'advisor.univ_id'; sortReverseAdvisor = !sortReverseAdvisor">
             Advisor ID
-            <span class="fa fa-caret-down" ng-show="sortTypeAdvisor == 'univ_id' &amp;&amp; !sortReverseAdvisor"></span>
-            <span class="fa fa-caret-up" ng-show="sortTypeAdvisor == 'univ_id' &amp;&amp; sortReverseAdvisor"></span>
+            <span class="fa fa-caret-down" ng-show="sortTypeAdvisor == 'advisor.univ_id' &amp;&amp; !sortReverseAdvisor"></span>
+            <span class="fa fa-caret-up" ng-show="sortTypeAdvisor == 'advisor.univ_id' &amp;&amp; sortReverseAdvisor"></span>
           </a>
         </td>
         <td>
@@ -73,22 +73,22 @@
         <td>
           <a href="" ng-click="sortTypeMentor = 'mentor.last_name'; sortReverseMentor = !sortReverseMentor">
             Mentor Name
-            <span class="fa fa-caret-down" ng-show="sortTypeMentor == 'last_name' &amp;&amp; !sortReverseMentor"></span>
-            <span class="fa fa-caret-up" ng-show="sortTypeMentor == 'last_name' &amp;&amp; sortReverseMentor"></span>
+            <span class="fa fa-caret-down" ng-show="sortTypeMentor == 'mentor.last_name' &amp;&amp; !sortReverseMentor"></span>
+            <span class="fa fa-caret-up" ng-show="sortTypeMentor == 'mentor.last_name' &amp;&amp; sortReverseMentor"></span>
           </a>
         </td>
         <td>
           <a href="" ng-click="sortTypeMentor = 'mentor.univ_id'; sortReverseMentor = !sortReverseMentor">
             Mentor ID
-            <span class="fa fa-caret-down" ng-show="sortTypeMentor == 'univ_id' &amp;&amp; !sortReverseMentor"></span>
-            <span class="fa fa-caret-up" ng-show="sortTypeMentor == 'univ_id' &amp;&amp; sortReverseMentor"></span>
+            <span class="fa fa-caret-down" ng-show="sortTypeMentor == 'mentor.univ_id' &amp;&amp; !sortReverseMentor"></span>
+            <span class="fa fa-caret-up" ng-show="sortTypeMentor == 'mentor.univ_id' &amp;&amp; sortReverseMentor"></span>
           </a>
         </td>
         <td>
           <a href="" ng-click="sortTypeMentor = 'cohort'; sortReverseMentor = !sortReverseMentor">
             Cohort
-            <span class="fa fa-caret-down" ng-show="sortTypeMentor == 'role' &amp;&amp; !sortReverseMentor"></span>
-            <span class="fa fa-caret-up" ng-show="sortTypeMentor == 'role' &amp;&amp; sortReverseMentor"></span>
+            <span class="fa fa-caret-down" ng-show="sortTypeMentor == 'cohort' &amp;&amp; !sortReverseMentor"></span>
+            <span class="fa fa-caret-up" ng-show="sortTypeMentor == 'cohort' &amp;&amp; sortReverseMentor"></span>
           </a>
         </td>
       </tr>
