--- a/sespa/app/views/course_detail.html
+++ b/sespa/app/views/course_detail.html
@@ -10,8 +10,8 @@
         <td>
           <a href="" ng-click="sortType = 'assignment.description'; sortReverse = !sortReverse">
             Assignment
-            <span class="fa fa-caret-down" ng-show="sortType == 'description' &amp;&amp; !sortReverse"></span>
-            <span class="fa fa-caret-up" ng-show="sortType == 'description' &amp;&amp; sortReverse"></span>
+            <span class="fa fa-caret-down" ng-show="sortType == 'assignment.description' &amp;&amp; !sortReverse"></span>
+            <span class="fa fa-caret-up" ng-show="sortType == 'assignment.description' &amp;&amp; sortReverse"></span>
           </a>
         </td>
         <td>
