--- a/sespa/app/styles/main.css
+++ b/sespa/app/styles/main.css
@@ -107,3 +107,8 @@ body {
     display: none;
   }
 }
+
+/* For ng-cloak */
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
